# SHINKEI

./: .gitignore  CLAUDE.md  DATABASE_SAFETY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  EMAIL_UNIQUENESS.md  GEMINI.md  LICENSE  PHASE2_INTEGRATION_GUIDE.md  PHASE_4_CRITICAL_FIXES.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_STATUS.md  PHASE_5_CRITICAL_ISSUES_REPORT.md  PHASE_5_FINAL_VERIFICATION_REPORT.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_APPLIED.md  SHINKEI_SPECS.md  Shinkei (心継) Project_ Software Architecture Document.md  TEST_COVERAGE_REPORT.md  verify_backend.py
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 1049c5ae82dd_add_conversation_models.py  17e6831954da_add_story_tags.py  30978efe42d1_create_entity_mentions_table.py  42b06b85f639_add_generation_reasoning_to_story_beats.py  4c436ce92d8e_create_world_events_table.py  4ef2e50fa551_create_stories_table.py  6c1c6123e69f_add_password_hash_to_users.py  7782c8f79908_add_story_soft_delete.py  9678c121e009_create_story_beats_table.py  a19d05a2b925_create_character_relationships_table.py  a7b3e4d9f2c1_add_narrative_generation_fields.py  b2c5d8e1f3a4_add_story_pilot_models.py  b6f58d8f00ab_create_worlds_table.py  d09e1e5e2a3a_create_locations_table.py  d22cd0806e0a_add_beat_modifications_table.py  f015af755a3d_create_characters_table.py  f94378c3be57_add_event_dependencies.py
backend/backups/: shinkei_backup_20251121_103036.sql
backend/scripts/: backup_database.py  reset_and_seed.py  seed_demo_data.py
backend/src/shinkei/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_characters.py  test_generation.py  test_locations.py  test_stories.py  (+4 more)
(+244 files in other folders)
